--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-prompt-android": "^1.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-snap-carousel": "github:apurba-bware/react-native-snap-carousel#5a7f809e921262e4e2f646e8cfc4da85f7bd663d",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
